syntax = "proto3";
option go_package = ".;proto";

import "ttype.proto";

/** 状态服务 */
service StatusService {
    /** 尝试连接 */
    rpc Ping (Empty) returns (String) {
    }
}